--- a/selectors/index.html
+++ b/selectors/index.html
@@ -14,34 +14,34 @@
 	<body>
 		<ul>
 			<li>
-				<div class="box box--first">01</div>
+				<div class="ball ball--first">01</div>
 			</li>
 			<li>
-				<div class="box">02</div>
+				<div class="ball">02</div>
 			</li>
 			<li>
-				<div class="box">03</div>
+				<div class="ball">03</div>
 			</li>
 			<li>
-				<div class="box box--colorful">04</div>
+				<div class="ball ball--colorful">04</div>
 			</li>
 			<li>
-				<div class="box box--colorful">05</div>
+				<div class="ball ball--colorful">05</div>
 			</li>
 			<li>
-				<div class="box">06</div>
+				<div class="ball">06</div>
 			</li>
 			<li>
-				<div class="box">07</div>
+				<div class="ball">07</div>
 			</li>
 			<li>
-				<div class="box">08</div>
+				<div class="ball">08</div>
 			</li>
 			<li>
-				<div class="box">09</div>
+				<div class="ball">09</div>
 			</li>
 			<li>
-				<div class="box box--last">10</div>
+				<div class="ball ball--last">10</div>
 			</li>
 		</ul>
 	</body>
