--- a/pages/rem.html
+++ b/pages/rem.html
@@ -8,13 +8,13 @@
         />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <title>Layouts</title>
+        <title>rem</title>
 
         <link rel="stylesheet" href="/styles/css/main.css" />
-        <link rel="stylesheet" href="/styles/css/layouts.css" />
+        <link rel="stylesheet" href="/styles/css/rem.css" />
     </head>
     <body>
-        <p>This is the <b>first</b> paragraph.</p>
-        <p>This is the <b>second</b> paragraph.</p>
+        <button class="px">px</button>
+        <button class="rem">rem</button>
     </body>
 </html>
