--- a/pages/layouts.html
+++ b/pages/layouts.html
@@ -14,7 +14,10 @@
         <link rel="stylesheet" href="/styles/css/layouts.css" />
     </head>
     <body>
-        <p>This is the <b>first</b> paragraph.</p>
+        <p>
+            This is the <b>first</b> paragraph. This is the <b>first</b> paragraph. This is the
+            <b>first</b> paragraph.
+        </p>
         <p>This is the <b>second</b> paragraph.</p>
     </body>
 </html>
