--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -16,7 +16,7 @@
     <body>
         <ul>
             <li>
-                <div class="ball ball--first">01</div>
+                <div class="ball">01</div>
             </li>
             <li>
                 <div class="ball">02</div>
@@ -25,10 +25,10 @@
                 <div class="ball">03</div>
             </li>
             <li>
-                <div class="ball ball--colorful">04</div>
+                <div class="ball">04</div>
             </li>
             <li>
-                <div class="ball ball--colorful">05</div>
+                <div class="ball">05</div>
             </li>
             <li>
                 <div class="ball">06</div>
@@ -43,7 +43,7 @@
                 <div class="ball">09</div>
             </li>
             <li>
-                <div class="ball ball--last">10</div>
+                <div class="ball">10</div>
             </li>
         </ul>
     </body>
